# shenafield-style-replicator

./: LICENSE  README.md  pyproject.toml
shenafield/: __init__.py  cli.py  shenafield.py
